C_CLIENT_LIB = c-client.a

C_CLIENT_SOURCES =	\
	mail.c		\
	misc.c		\
	newsrc.c	\
	smanager.c	\
	osdep.c		\
	utf8.c		\
	siglocal.c	\
	dummy.c		\
	pseudo.c	\
	netmsg.c	\
	flstring.c	\
	fdstring.c	\
	rfc822.c	\
	nntp.c		\
	smtp.c		\
	imap4r1.c	\
	pop3.c		\
	unix.c		\
	mbox.c		\
	mbx.c		\
	mmdf.c		\
	tenex.c		\
	mtx.c		\
	news.c		\
	phile.c		\
	mh.c		\
	mx.c

INCLUDES=-I. -I$(srcdir)/../imap/c-client $(GNOME_INCLUDEDIR)
