if HAVE_YELPTOOL
@YELP_HELP_RULES@
HELP_ID      = balsa
HELP_MEDIA   = figures/address-book-ldap.png			\
	      figures/address-book-modify.png			\
	      figures/address-book.png				\
	      figures/address-book-vcard.png			\
	      figures/balsa_logo.png				\
	      figures/druid-start.png				\
	      figures/example-alias.png				\
	      figures/figuresdobaaddress-book-modify.png	\
	      figures/main-window.png				\
	      figures/main-window-toolbar.png			\
	      figures/message-window.png			\
	      figures/msg-part-select.png			\
	      figures/newmsg-window-attachments.png		\
	      figures/newmsg-window.png				\
	      figures/newmsg-window-toolbar.png			\
	      figures/preferences-window.png			\
	      figures/spell-check.png
HELP_LINGUAS = de es fr sl

doc-dist-hook:

endif
