SUBDIRS = mimetypes

# balsa_logo.png used by About menu (small one).
# balsa-logo.png used by the init-druid
balsa_IMGS = \
	attachment.png		\
	balsa-logo.png		\
	balsa-top.png		\
	balsa-watermark.png	\
	balsa_icon.png		\
	balsa_logo.png

EXTRA_DIST =	$(balsa_IMGS)

balsabitmapsdir = $(datadir)/balsa/pixmaps

balsabitmaps_DATA = $(balsa_IMGS)

